option('build_tests',			type : 'boolean', value : false,	description : 'Build tests (no effect when included as a subproject)')
option('build_examples',		type : 'boolean', value : false,	description : 'Build examples (no effect when included as a subproject)')
option('pedantic',			    type : 'boolean', value : false,	description : 'Enable as many compiler warnings as possible')
option('time_trace',			type : 'boolean', value : false,	description : 'Enable the -ftime-trace option (Clang only)')
option('static_dllexport',		type : 'boolean', value : false,	description : 'Defines MUU_API as __declspec(dllexport) even when building as a static library (Windows only)')
