option('devel', 				type: 'boolean', 	value: false,	description: 'Tell meson whether or not it is a development build.')
option('build_tests',			type: 'boolean',	value: false,	description: 'Build tests (no effect when included as a subproject) (implied by devel)')
option('build_examples',		type: 'boolean',	value: false,	description: 'Build examples (no effect when included as a subproject) (implied by devel)')
option('pedantic',			    type: 'boolean',	value: false,	description: 'Enable as many compiler warnings as possible (implied by devel)')
option('time_trace',			type: 'boolean',	value: false,	description: 'Enable the -ftime-trace option (Clang only)')
option('static_dllexport',		type: 'boolean',	value: false,	description: 'Defines MUU_API as __declspec(dllexport) even when building as a static library (Windows only)')
option('use_vendored_libs',		type: 'boolean',	value: true,	description: 'Use the libs from the vendor dir when building tests.')
option('float16',				type: 'boolean',	value: true,	description: 'Use _Float16 and __fp16 where available.')
