# This file is a part of muu and is subject to the the terms of the MIT license.
# Copyright (c) Mark Gillard <mark.gillard@outlook.com.au>
# See https://github.com/marzer/muu/blob/master/LICENSE for the full license text.
# SPDX-License-Identifier: MIT

include_dir = include_directories('.')

if not is_subproject
	install_subdir('muu', install_dir: get_option('includedir'))
endif
